GRAMMAR.txt
Package := DocBang? PackageStmt*

PackageStmt :=
      PackageImport
    | Item

PackageImport := "import" Ident

DocString := ("DocComment")+

DocBang := ("DocBang")+

Annotations := Annotation*

Annotation :=
      "@" Ident "(" Nat ")"
    | "@" Ident "(" Str ")"
    | "@" Ident

Item :=
      ModDef
    | StructDef
    | UnionDef
    | EnumDef
    | BuiltinDef
    | SocketDef
    | PlatformDef

ModDef := DocString? Annotations "ext"? "export"? "mod" Ident "{" ModDefStmt* "}"

StructDef := DocString? Annotations "struct" "type" Ident "{" StructDefStmt* "}"

PlatformDef := DocString? Annotations "platform" Ident "{" PlatformStmt* "}"

PlatformStmt := ModDefStmtComponent

StructDefStmt := DocString? Annotations Ident ":" Type

UnionDef := DocString? Annotations "union" "type" Ident "{" UnionDefStmt* "}"

UnionDefStmt := DocString? Annotations Ident ParamList?

ParamList := "(" Params? ")"

Params :=
      Param
    | Params "," Param

Param := DocString? Annotations Ident ":" Type

GenericsParams :=
      "[" Nat "]"
    | "[" Type "]"

Generics := "[" Ident ":" Kind "]"

EnumDef := DocString? Annotations "enum" "type" Ident "{" EnumDefStmt* "}"

EnumDefStmt := DocString? Annotations Ident "=" Expr

BuiltinDef := DocString? Annotations "builtin" "type" Ident Generics? "{" "}"

SocketDef := DocString? Annotations "socket" Ident "{" SocketDefStmt* "}"

SocketDefStmt :=
      DocString? Annotations "cosi" Ident ":" Type
    | DocString? Annotations "soci" Ident ":" Type

ModDefStmt :=
      ModDefStmtComponent
    | ModDefStmtDriver
    | ModDefStmtInstance
    | ModDefStmtSocket
    | ModDefStmtWhen
    | ModDefStmtMatch
    | ModDefStmtUnused
    | ModDefStmtDependsOn

ModDefStmtComponent :=
      DocString? Annotations "incoming" Ident ":" Type OnClause? ItBlock?
    | DocString? Annotations "outgoing" Ident ":" Type OnClause? ItBlock?
    | DocString? Annotations "outgoing" "wire" Ident ":" Type OnClause? ItBlock?
    | DocString? Annotations "outgoing" "reg" Ident ":" Type OnClause? ItBlock?
    | DocString? Annotations "wire" Ident ":" Type OnClause? ItBlock?
    | DocString? Annotations "reg" Ident ":" Type OnClause? ItBlock?

OnClause := "on" Expr

ModDefStmtDriver :=
      Path ":=" Expr
    | Path "<=" Expr
    | Path ":=:" Path

ModDefStmtInstance := DocString? Annotations "mod" Ident "of" Ofness ItBlock?

ItBlock := ModDefStmtBlock

ModDefStmtSocket :=
      DocString? Annotations "client" "socket" Ident "of" Ofness ItBlock?
    | DocString? Annotations "server" "socket" Ident "of" Ofness ItBlock?

ModDefStmtWhen := "when" "{" ModDefStmtWhenArm* "}"

ModDefStmtWhenArm :=
      "case" Expr "=>" Expr
    | "case" Expr ModDefStmtBlock
    | "case" Expr ModDefStmtWhen
    | "case" Expr ModDefStmtMatch
    | "else" "=>" Expr
    | "else" ModDefStmtBlock
    | "else" ModDefStmtWhen
    | "else" ModDefStmtMatch

ModDefStmtMatch := "match" Expr "{" ModDefStmtMatchArm* "}"

ModDefStmtMatchArm :=
      "case" Pat "=>" Expr
    | "case" Pat ModDefStmtBlock
    | "case" Pat ModDefStmtWhen
    | "case" Pat ModDefStmtMatch
    | "else" "=>" Expr
    | "else" ModDefStmtBlock
    | "else" ModDefStmtWhen
    | "else" ModDefStmtMatch

ModDefStmtUnused := "unused" Path

ModDefStmtDependsOn := Path "dependson" Path

ModDefStmtBlock := "{" ModDefStmt* "}"

Kind := Ident

Type := Ofness GenericsParams?

Expr :=
      ExprWhen
    | ExprMatch
    | ExprStruct
    | ExprBinOpLogical

ExprWhen := "when" "{" ExprWhenArm* "}"

ExprWhenArm :=
      "case" Expr "=>" Expr
    | "case" Expr ModDefStmtBlock
    | "case" Expr ExprWhen
    | "case" Expr ExprMatch
    | "else" "=>" Expr
    | "else" ModDefStmtBlock
    | "else" ExprWhen
    | "else" ExprMatch

ExprMatch := "match" Expr "{" ExprMatchArm* "}"

ExprMatchArm :=
      "case" Pat "=>" Expr
    | "case" Pat ModDefStmtBlock
    | "case" Pat ExprWhen
    | "case" Pat ExprMatch
    | "else" "=>" Expr
    | "else" ModDefStmtBlock
    | "else" ExprWhen
    | "else" ExprMatch

Pat :=
      "#" Ident
    | "@" Ident
    | "@" Ident "(" PatList ")"
    | WordLit
    | BitLit
    | Ident
    | "dontcare"

PatList :=
      (Pat ",")+ Pat ","?
    | Pat ","?
    |

ExprStruct := "$" "{" AssignList "}"

AssignList :=
      (Assign ",")* Assign ","?
    | Expr ","?
    |

Assign := Ident "=" Expr

BinOpLogical :=
      "&&"
    | "||"
    | "^^"

ExprBinOpLogical :=
      ExprBinOpLogical BinOpLogical ExprBinOpCompare
    | ExprBinOpCompare

BinOpCompare :=
      "<"
    | "<="
    | ">"
    | ">="
    | "=="
    | "!="

ExprBinOpCompare :=
      ExprBinOpCompare BinOpCompare ExprBinOpAdditive
    | ExprBinOpAdditive

BinOpAdditive :=
      "+"
    | "-"
    | "&"
    | "|"
    | "^"

ExprBinOpAdditive :=
      ExprBinOpAdditive BinOpAdditive ExprUnOp
    | ExprUnOp

UnOp :=
      "-"
    | "~"
    | "!"

ExprUnOp :=
      UnOp ExprUnOp
    | ExprAscription

ExprAscription :=
      ExprPrimary ":" Type
    | ExprPrimary

ExprPrimary :=
      Ofness "(" ArgList ")"
    | ExprPrimary "->" Ident
    | ExprPrimary "[" "dyn" Expr "]"
    | ExprPrimary "[" Index "]"
    | ExprPrimary "[" Index ".." Index "]"
    | "@" Ident "(" ArgList ")"
    | ExprAtom

ExprAtom :=
      Path
    | WordLit
    | BitLit
    | "Str"
    | "#" Ident
    | "@" Ident
    | "?"
    | "dontcare"
    | "(" Expr ")"

ArgList :=
      (Expr ",")+ Expr ","?
    | Expr ","?
    |

Ofness :=
      Ident
    | Ident "::" Ident

Path :=
      Ident ("." Ident)*
    | "it" ("." Ident)*

Index := "Nat"

Width := "Nat"

WordLit :=
      "Nat"
    | "Word"

BitLit :=
      "true"
    | "false"

Ident := "Ident"

Nat := "Nat"

Str := "Str"

Tokens:
  "!"
  "!="
  "#"
  "$"
  "&"
  "&&"
  "("
  ")"
  "+"
  ","
  "-"
  "->"
  "."
  ".."
  ":"
  "::"
  ":="
  ":=:"
  "<"
  "<="
  "="
  "=="
  "=>"
  ">"
  ">="
  "?"
  "@"
  "DocBang"
  "DocComment"
  "Ident"
  "Nat"
  "Str"
  "Word"
  "["
  "]"
  "^"
  "^^"
  "builtin"
  "case"
  "client"
  "cosi"
  "dependson"
  "dontcare"
  "dyn"
  "else"
  "enum"
  "export"
  "ext"
  "false"
  "import"
  "incoming"
  "it"
  "match"
  "mod"
  "of"
  "on"
  "outgoing"
  "platform"
  "reg"
  "server"
  "soci"
  "socket"
  "struct"
  "true"
  "type"
  "union"
  "unused"
  "when"
  "wire"
  "{"
  "|"
  "||"
  "}"
  "~"
